Updating copy on homepage

--- a/static/index.html
+++ b/static/index.html
@@ -60,7 +60,7 @@ a:hover {
 <span class="indent">
 	<p>"info" : {</p>
 	<span class="double_indent">
-		<p>"name" : "John Gaffney",</p>
+		<p>"name" : "John D. Gaffney",</p>
 		<p>"occupation" : "Software Engineer",</p>
 		<p>"location" : "Somerville, MA, USA",</p>
 		<p>"interests" : {</p>
